<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".myProfile">


    <ImageView
        android:id="@+id/myProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/image_marginStart"
        android:layout_marginTop="@dimen/margin_top_end_image"
        android:layout_marginEnd="@dimen/margin_top_end_image"
        android:contentDescription="@string/my_profile_pic"
        android:scaleType="center"
        app:srcCompat="@drawable/my_profile_picture" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:fontFamily= "sans-serif-condensed"
        android:text="@string/my_name"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/colorAccent"/>



    <TextView
        android:id="@+id/track_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_textview"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/margin_start"
        android:textSize="@dimen/text_size_others"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/my_track" />

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_textview"
        android:layout_marginEnd="@dimen/margin_end"
        android:textSize="@dimen/text_size_others"
        android:textColor="@android:color/black"
        android:text="@string/my_email" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_textview"
        android:textSize="@dimen/text_size_others"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/my_phone_number" />

    <TextView
        android:id="@+id/Slack_username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_textview"
        android:layout_marginEnd="@dimen/margin_end"
        android:textSize="@dimen/text_size_others"
        android:text="@string/my_slack_username" />

</LinearLayout>
</ScrollView>